# web-search-api

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: bandit.yaml  docker.yaml  pyright.yaml  ruff.yaml  tests.yaml
src/websearchapi/: __init__.py  __main__.py
src/websearchapi/api/: __init__.py  docs.py  health.py
src/websearchapi/api/middlewares/: __init__.py  authentication.py
src/websearchapi/api/v1/: __init__.py  engine.py  search.py
src/websearchapi/core/: __init__.py
src/websearchapi/core/browser/: __init__.py  browser.py
src/websearchapi/core/engines/: abc.py  ask.py  brave.py  duckduckgo.py  yahoo.py
src/websearchapi/engine/: __init__.py  abc.py  brave.py  browser_config.py  duckduckgo.py
src/websearchapi/models/: engine.py  heath.py  search.py
src/websearchapi/shared/: __init__.py  _config.py
tests/: __init__.py  test_ask.py  test_brave.py  test_duckduckgo.py  test_yahoo.py
